--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,80 @@
 /* .question-list-card-author {
     text-align: right;
 } */
+
+.topofnav {
+    display: flex;
+    background-color: orange;
+    height: .2em;
+    width: 90em;
+    position: fixed;
+}
+
+.navbar {
+    display: flex;
+    background-color: rgb(239, 239, 239);
+    height: 3em;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
+.SideNav {
+    display: flex;
+    position: fixed;
+    margin-top:3em;
+    padding-top: 1em;
+    border: .02em solid rgb(161, 161, 161);
+    height: 90em;
+    width: 14em;
+}
+
+.Sidecontent {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+.homelink {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-style: bold;
+    margin: 1em;
+}
+
+.sidenavlinks {
+    display: flex;
+    justify-content: center;
+    font-size: 12px;
+    margin: .5em;
+}
+
+.teamlink {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+    font-style: bold;
+}
+
+.teamsqa {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    border: .01em solid rgb(194, 194, 194);
+    padding: .5em;
+    margin-left: 3em;
+    margin-top: 1em;
+    width: 10em;
+}
+
+
+
+/*questionspage*/
+
+.questioninput {
+    display:flex;
+    flex-direction: column;
+    margin-top: 5em;
+    justify-content: center;
+}
