--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,80 +1,72 @@
-/* .question-list-card-author {
-    text-align: right;
-} */
-
-.topofnav {
-    display: flex;
-    background-color: orange;
-    height: .2em;
-    width: 90em;
-    position: fixed;
+.app {
+    width: 100%;
+    height: 100%;
 }
-
 .navbar {
     display: flex;
-    background-color: rgb(239, 239, 239);
-    height: 3em;
+    background-color: #FAFAFB;
+    height: 8%;
     width: 100%;
-    position: fixed;
-    z-index: 100;
 }
 
-.SideNav {
+.navbar-top {
+    background-color: orange;
+    height: .25em;
+    width: 100%;
+}
+
+.app-body {
+    width: 100%;
+    height: 92%;
     display: flex;
-    position: fixed;
-    margin-top:3em;
-    padding-top: 1em;
-    border: .02em solid rgb(161, 161, 161);
-    height: 90em;
-    width: 14em;
+    margin-top: 1em;
 }
 
-.Sidecontent {
+.side-nav {
+    height: 100%;
+    width: 20%;
+    border: .02em solid rgb(161, 161, 161);
+}
+
+.side-content {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
 }
 
-.homelink {
-    display: flex;
-    justify-content: center;
-    font-size: 16px;
-    font-style: bold;
-    margin: 1em;
+.home-link {
+    text-align: center;
+    font-weight: bold;
+    padding: 1em;
+    margin: 0;
 }
 
-.sidenavlinks {
-    display: flex;
-    justify-content: center;
-    font-size: 12px;
-    margin: .5em;
+.side-nav-links {
+    text-align: center;
+    padding: .5em;
+    margin: 0;
 }
 
-.teamlink {
+.teams-qa {
     display: flex;
-    justify-content: center;
-    font-size: 16px;
-    font-style: bold;
-}
-
-.teamsqa {
-    display: flex;
-    justify-content: center;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     border: .01em solid rgb(194, 194, 194);
     padding: .5em;
-    margin-left: 3em;
     margin-top: 1em;
-    width: 10em;
+    width: 100%;
 }
 
+.team-link {
+    text-align: center;
+    font-weight: bold;
+}
 
+.question-list-page {
+    width: 80%;
+}
 
-/*questionspage*/
-
-.questioninput {
-    display:flex;
-    flex-direction: column;
-    margin-top: 5em;
-    justify-content: center;
+#question-details-page {
+    width: 80%;
 }
